# github-template

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .mega-linter.yml  .pre-commit-config.yaml  .secrets.baseline  .terrascan.toml  .tflint.hcl  .yamllint.yml  CONTRIBUTING.md  CREATE_PR_INSTRUCTIONS.md  DEPLOYMENT.md  Dockerfile  LICENSE  LICENSE_HEADER.txt  Makefile  README.md  SECURITY.md  TEMPLATE_INFO.md  cloudbuild.yaml  create-pr.md  output.txt  pyproject.toml  test-manual-fix.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: AUTO-FIX-IMPROVEMENTS.md  CODEOWNERS  PAT_SETUP.md  PULL_REQUEST_TEMPLATE.md  SETUP.md  branch-protection-template.json  copilot-instructions.md  dependabot.yml  terraform.agent.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: create-labels.sh
.github/workflows/: PIPELINE_VISUALIZATION.md  actionlint.yml  auto-fix.yml  aws-deploy.yml  basic-ci-corrected.yml  ci.yml  cloud-build-deploy.yml  compliance.yml  dependencies.yml  dependency-management.yml  dockerfile.yml  gcp-deploy.yml  mega-linter.yml  multi-cloud-deploy.yml  performance.yml  pre-commit.yml  python.yml  release.yml  security.yml  setup-labels.yml  terraform.yml  test-auto-fix.yml  test-claude-action.yml  test-trigger-fix.yml  testing.yml  yaml.yml
docs/: CLOUD-BUILD.md  GCP-APIS-REFERENCE.md  GCP-SETUP.md  QUICK-START-GCP.md  TEMPLATE-USAGE.md  ci-architecture.md  deployment-quick-reference.md  deployment-workflows-guide.md  linting-notes.md  multi-cloud.md  pre-deployment-checklist.md  security-audit-report.md  security-checklist.md  troubleshooting.md  validation-results.md
docs/examples/: terraform-aws-dev.tfvars.example  terraform-gcp-dev.tfvars.example
docs/runbooks/: gcp-cloud-build-onboarding.md
megalinter-reports/: IDE-config.txt  megalinter-report.md
megalinter-reports/sbom/: syft.txt  trivy.json
megalinter-reports/updated_sources/docs/: CLOUD-BUILD.md  GCP-SETUP.md
megalinter-reports/updated_sources/megalinter-reports/: megalinter-report.md
python/: .env.example  README.md  broken_python.py  pyproject.toml  requirements-dev.txt  requirements.txt  syntax_errors.py  test_comprehensive_errors.py  workflow_test.py
python/src/: main.py
python/tests/: test_main.py
scripts/: README.md  setup-gcp-project.sh  test-manual-fix.py
src/: advanced_test.py  another_test.py
terraform/: MULTI_CLOUD_SUMMARY.md  README-MultiCloud.md  README.md  TERRAFORM_GUIDE.md  aws.tf  backend.tf  gcp.tf  main.tf  outputs.tf  providers.tf  service_accounts.tf  terraform.tfvars.example  variables.tf  versions.tf
